@@ -11,6 +11,7 @@ url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console
 
 [@Author::ETHER]
 :version = 0.006
+-remove = MakeMaker
 
 [NoAutomatedTesting]
 
